--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -1,6 +1,6 @@
 {%- extends "@SonatraGluon/base_content.html.twig" -%}
 
-{%- set fluidicon = fluidicon|default({ asset: 'bundles/sonatragluon/fluidicon.png', title: 'Sonatra'} -%}
+{%- set fluidicon = fluidicon|default({ asset: 'bundles/sonatragluon/fluidicon.png', title: 'Sonatra'}) -%}
 {%- set icons = icons|default([
     { rel: 'apple-touch-icon', sizes: '114x144', asset: 'bundles/sonatragluon/apple-touch-icon-114.png' },
     { rel: 'apple-touch-icon', sizes: '144x144', asset: 'bundles/sonatragluon/apple-touch-icon-144.png' },
