--- a/Resources/views/base_content.html.twig
+++ b/Resources/views/base_content.html.twig
@@ -9,7 +9,10 @@
 
 {%- block metadata -%}
     {{- parent() -}}
-    <meta http-equiv="Content-Language" content="{{ app.request.locale }}">
+    {%- if content_language is not defined -%}
+        {%- set content_language = app.request.locale -%}
+    {%- endif -%}
+    <meta http-equiv="Content-Language" content="{{ content_language }}">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     {%- if theme_color is defined -%}
         <meta name="theme-color" content="{{ theme_color }}">
@@ -22,7 +25,7 @@
     {%- if app.tokenStorage is defined and app.user.username is defined -%}
         <meta name="user-login" content="{{ app.user.username }}">
     {%- endif -%}
-    {%- if is_dotcom is defined  and is_dotcom == true -%}
+    {%- if is_dotcom is defined and is_dotcom == true -%}
         <meta name="is-dotcom" content="true">
     {%- endif -%}
 {%- endblock metadata -%}
