Replace deprecated code

--- a/Resources/views/base_content.html.twig
+++ b/Resources/views/base_content.html.twig
@@ -73,7 +73,7 @@
                 factory(jQuery);
             }
         }(function ($) {
-            $(window).load(function() {
+            $(window).on('load', function() {
                 $(document).appPjax('executeMainScripts');
             });
         }));
