--- a/Resources/views/Form/form_bootstrap_datetime.html.twig
+++ b/Resources/views/Form/form_bootstrap_datetime.html.twig
@@ -39,7 +39,7 @@
     {%- inline_script -%}
     <script>
         $(document).appPjax('addUnregister', function () {
-            $('#{{ id }}').off('change.sonatra_select2');
+            $('#{{ id }}').off('change.fxp_select2');
             $('#{{ id }}').select2('destroy');
         });
     </script>
