--- a/Resources/views/Security/login.html.twig
+++ b/Resources/views/Security/login.html.twig
@@ -1,10 +1,10 @@
-{%- extends "@SonatraGluon/base.html.twig" -%}
+{%- extends "@FxpGluon/base.html.twig" -%}
 
 {%- trans_default_domain 'FOSUserBundle' -%}
 
 {%- set whitout_navbar = whitout_navbar|default(false) -%}
-{%- set logo_src = logo_src|default('bundles/sonatragluon/logo_inverse.svg') -%}
-{%- set logo_alt = logo_alt|default('Sonatra') -%}
+{%- set logo_src = logo_src|default('bundles/fxpgluon/logo_inverse.svg') -%}
+{%- set logo_alt = logo_alt|default('Fxp') -%}
 
 {%- block title %}{{ 'layout.login'|trans }}{% endblock title -%}
 
