--- a/Resources/views/app_base.html.twig
+++ b/Resources/views/app_base.html.twig
@@ -1,4 +1,4 @@
-{%- extends "@SonatraGluon/base.html.twig" -%}
+{%- extends "@FxpGluon/base.html.twig" -%}
 
 {%- set body_main_attr = body_main_attr|default({})|merge({'id': "pjax-container"}) -%}
 
