--- a/Resources/views/base_content.html.twig
+++ b/Resources/views/base_content.html.twig
@@ -1,4 +1,4 @@
-{%- extends "@SonatraBootstrap/base.html.twig" -%}
+{%- extends "@FxpBootstrap/base.html.twig" -%}
 
 {%- block stylesheets -%}
     {{- stylesheet_google_fonts() -}}
