--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -1,8 +1,8 @@
-{%- extends "@SonatraGluon/base_content.html.twig" -%}
+{%- extends "@FxpGluon/base_content.html.twig" -%}
 
-{%- set fluidicon = fluidicon|default({ asset: 'bundles/sonatragluon/fluidicon.png', title: 'Sonatra'}) -%}
+{%- set fluidicon = fluidicon|default({ asset: 'bundles/fxpgluon/fluidicon.png', title: 'Fxp'}) -%}
 {%- set icons = icons|default([
-    { rel: 'apple-touch-icon', sizes: '114x144', asset: 'bundles/sonatragluon/apple-touch-icon-114.png' },
-    { rel: 'apple-touch-icon', sizes: '144x144', asset: 'bundles/sonatragluon/apple-touch-icon-144.png' },
+    { rel: 'apple-touch-icon', sizes: '114x144', asset: 'bundles/fxpgluon/apple-touch-icon-114.png' },
+    { rel: 'apple-touch-icon', sizes: '144x144', asset: 'bundles/fxpgluon/apple-touch-icon-144.png' },
 ]) -%}
-{%- set msapplication = { asset: 'bundles/sonatragluon/windows-tile.png', color: '#0071ce'} -%}
+{%- set msapplication = { asset: 'bundles/fxpgluon/windows-tile.png', color: '#0071ce'} -%}
