Move the form content of select2 widget

--- a/Resources/views/Form/form_bootstrap.html.twig
+++ b/Resources/views/Form/form_bootstrap.html.twig
@@ -20,6 +20,7 @@
 {%- use '@FxpGluon/Form/form_bootstrap_radio.html.twig' -%}
 {%- use '@FxpGluon/Form/form_bootstrap_toggle.html.twig' -%}
 {%- use '@FxpGluon/Form/form_bootstrap_file.html.twig' -%}
+{%- use '@FxpGluon/Form/form_bootstrap_select2.html.twig' -%}
 {%- use '@FxpGluon/Form/form_bootstrap_choice.html.twig' -%}
 {%- use '@FxpGluon/Form/form_bootstrap_collection.html.twig' -%}
 {%- use '@FxpGluon/Form/form_bootstrap_datetime.html.twig' -%}
